@@ -1,3 +1,6 @@
+02-27-13
+. fixed bug on looping when receving a 400 (msg size too large)
+
 02-26-13
 . errors logged to /tmp/pubnubError.log by default
 . selectively retry based on operation type
